fixed welcome content not centering on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -393,6 +393,13 @@ h4 {
   min-height: 40vh;
 }
 
+.welcome-content {
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* NAVIGATION */
 
 .navbar,
@@ -727,11 +734,8 @@ h4 {
   }
 
   .welcome-content {
-    display: flex;
-    flex-direction: column;
     gap: 3rem;
     width: 70%;
-    align-items: center;
   }
 
   .quick-link-containers {
